...
            Spacer(modifier = Modifier.width(15.dp))
            TextField(
                modifier = Modifier
                    .focusRequester(focusRequester)
                    .shadow(elevation = 0.dp, shape = RoundedCornerShape(10.dp))
                    .padding(end = 10.dp)
                    .testTag("ProductInputText"),
                label = {
                    Text(text = "Modify this product")
                },
                value = textValue.value,
                onValueChange = { changedTextValue ->
                    textValue.value = changedTextValue
...
