...
@Composable
fun AddProductButton2(
    modifier: Modifier = Modifier,
    onClick: () -> Unit,
) {
    FloatingActionButton(
        modifier = modifier.testTag("AddProduct"),
        onClick = onClick,
    ) {
        Icon(androidx.compose.material.icons.Icons.Filled.Add, "Localized description")
    }
}

...
